--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,7 +24,7 @@ include = [
 ]
 
 [tool.poetry.dependencies]
-python = "^3.12.7"
+python = ">=3.12.7,<3.13"
 
 # Doc Dependencies (need to be distributed for readthedocs)
 autodocsumm = { version = "^0.2.9", optional = true }
@@ -33,11 +33,12 @@ sphinx-autodoc-typehints = { version = "^1.19.5", optional = true }
 sphinx_rtd_theme = { version = "^1.1.1", optional = true }
 
 # Main Dependencies
+pendulum = "^3.0.0"
 marshmallow = "^3.5.1"
 python-dateutil = "^2.8"
 pytz = "^2022.7.1"
 requests = "^2.32.0"
-yarl = "^1.4.2"
+yarl = ">=1.4.2"
 certifi = "^2024.7.4"
 pyotp = "^2.8.0"
 
@@ -61,6 +62,7 @@ nbstripout = "0.6.1"
 # darglint = "1.8.1"
 
 # Testing
+[tool.poetry.group.test.dependencies]
 coverage = "^6.5.0"
 freezegun = "^1.2.2"
 pytest = "^7.2.0"
@@ -119,5 +121,5 @@ exclude_lines = [
 addopts = "-vv -x --cov=pyrh --cov-report=term --cov-report=html"
 
 [build-system]
-requires = ["poetry>=1.0.5"]
-build-backend = "poetry.masonry.api"
+requires = ["poetry-core>=1.0.0"]
+build-backend = "poetry.core.masonry.api"
