--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,6 +34,7 @@ sphinx_rtd_theme = { version = "^1.1.1", optional = true }
 
 # Main Dependencies
 pendulum = "^3.0.0"
+httplib2 = "^0.22.0"
 marshmallow = "^3.5.1"
 python-dateutil = "^2.8"
 pytz = "^2022.7.1"
